dist/LineScript-win64-20260616/tests/cases/compile_fail/operator_unary_method_bad_arity.lsc
class BadUnary do
  fn operator unary -(x: i64) -> i64 do
    return x
  end
end
